# rust-crud

./: Cargo.toml  README.md  rustfmt.toml
src/: main.rs
src/domain/models/: mod.rs  user.rs
src/domain/models/tests/: user_test.rs
